# OpenDaw

./: CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  V1_FEATURE_SET_ROADMAP.md
.github/workflows/: release.yml
src/: main.cpp
src/ai/: AiChatWidget.cpp  AiChatWidget.h  AiQuickPrompt.cpp  AiQuickPrompt.h  AiService.cpp  AiService.h  AiToolDefs.cpp  AiToolDefs.h  AiToolExecutor.cpp  AiToolExecutor.h  AiTypes.h
src/app/: FreeDawApplication.h
src/engine/: AudioEngine.cpp  AudioEngine.h  EditManager.cpp  EditManager.h  PluginScanner.cpp  PluginScanner.h
src/ui/: MainWindow.cpp  MainWindow.h  SplashScreen.cpp  SplashScreen.h
src/ui/browser/: FileBrowserPanel.cpp  FileBrowserPanel.h
src/ui/controls/: LevelMeter.cpp  RotaryKnob.cpp  VolumeFader.cpp
src/ui/dialogs/: ExportDialog.cpp  ExportDialog.h
src/ui/effects/: PluginEditorWindow.cpp  PluginEditorWindow.h  VstSelectorDialog.cpp  VstSelectorDialog.h
src/ui/mixer/: ChannelStrip.cpp  ChannelStrip.h  MixerView.cpp  MixerView.h
src/ui/pianoroll/: CcLane.cpp  CcLane.h  ChannelColors.h  NoteGrid.cpp  NoteGrid.h  NoteItem.cpp  NoteItem.h  PianoKeyboard.cpp  PianoKeyboard.h  PianoRollEditor.cpp  PianoRollEditor.h  VelocityLane.cpp  VelocityLane.h
src/ui/sheetmusic/: NotationModel.cpp  NotationModel.h  ScoreScene.cpp  ScoreScene.h  SheetMusicView.cpp  SheetMusicView.h
src/ui/timeline/: AutomationLaneItem.cpp  AutomationLaneItem.h  ClipItem.cpp  ClipItem.h  FolderHeaderWidget.cpp  FolderHeaderWidget.h  GridSnapper.cpp  GridSnapper.h  MarkerTempoLane.cpp  MarkerTempoLane.h  TimelineView.cpp  TimelineView.h  TrackHeaderWidget.cpp  TrackHeaderWidget.h  VideoTrackLane.cpp  VideoTrackLane.h
src/ui/transport/: TransportBar.cpp
src/ui/video/: VideoPlayerWidget.cpp  VideoPlayerWidget.h
src/utils/: FFmpegUtils.cpp  FFmpegUtils.h  IconFont.h  ThemeManager.h
src/video/: VideoThumbnailCache.cpp  VideoThumbnailCache.h
